# bibexplorer

./: CMakeLists.txt  README.md  _config.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build.yml  docs.yml
docs/: APIs.md  _config.yml  contributing.md  examples.md  index.md  install.md  limitations.md  references.md
docs/contributing/: contributors.md
docs/examples/: citations.md  compare.md  correlations.md  indicators.md  input-formats.md  running-bibexplorer.md  stability.md  timeline.md
docs/examples/input-formats/: csv.md  json.md  lattes-xml.md
docs/install/: build-from-source.md  packages.md
docs/install/build-from-source/: build-only.md  building-the-packages.md  dependencies.md  install-from-source.md
documentation/: APIs.md
documentation/images/: Thumbs.db
resources/examples/input/: ringo.csv  satoshi.json
source/: CMakeLists.txt
source/bibliometrics/application/: application.cpp  application.h
source/bibliometrics/common/: algorithm.cpp  algorithm.h  nantest.cpp  system.h
source/bibliometrics/graph/: author.cpp  author.h  author_group.cpp  author_group.h  paper.cpp  paper.h
standalone/: CMakeLists.txt
standalone/bibexplorer/: .gitignore  CMakeLists.txt  bibexplorer.cpp
